--- a/common/ryantibs.bib
+++ b/common/ryantibs.bib
@@ -1,12 +1,44 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Ryan Tibshirani at 2023-03-05 20:09:47 -0800 
+%% Created for Ryan Tibshirani at 2023-03-15 23:28:37 -0700 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@unpublished{bach2023high,
+	author = {Francis Bach},
+	date-added = {2023-03-15 23:28:00 -0700},
+	date-modified = {2023-03-15 23:28:36 -0700},
+	note = {arXiv: 2303.01372},
+	title = {High-dimensional analysis of double descent for linear regression with random projections},
+	year = {2023}}
+
+@inproceedings{richards2021asymptotics,
+	author = {Dominic Richards and Jaouad Mourtada and Lorenzo Rosasco},
+	booktitle = {International Conference on Artificial Intelligence and Statistics},
+	date-added = {2023-03-14 20:04:45 -0700},
+	date-modified = {2023-03-14 20:06:36 -0700},
+	title = {Asymptotics of ridge (less) regression under general source condition},
+	year = {2021}}
+
+@inproceedings{wu2020optimal,
+	author = {Denny Wu and Ji Xu},
+	booktitle = {Advances in Neural Information Processing Systems},
+	date-added = {2023-03-14 20:02:23 -0700},
+	date-modified = {2023-03-14 20:04:03 -0700},
+	title = {On the optimal weighted $\ell_2$ regularization in overparameterized linear regression},
+	year = {2020}}
+
+@book{williams1991probability,
+	author = {David Williams},
+	date-added = {2023-03-11 07:39:58 -0800},
+	date-modified = {2023-03-11 07:40:45 -0800},
+	publisher = {Cambridge University Press},
+	title = {Probability with Martingales},
+	year = {1991}}
 
 @unpublished{dar2021farewell,
 	author = {Yehuda Dar and Vidya Muthukumar and Richard Baraniuk},
@@ -33,10 +65,6 @@
 	pages = {87--201},
 	title = {Deep learning: {A} statistical viewpoint},
 	year = {2021}}
-
-@article{cite-key,
-	date-added = {2023-03-05 13:14:38 -0800},
-	date-modified = {2023-03-05 13:14:38 -0800}}
 
 @book{bogachev2007measure,
 	author = {Vladimir I. Bogachev},
