Correct minor typo

--- a/lectures/lasso/lasso.tex
+++ b/lectures/lasso/lasso.tex
@@ -334,7 +334,7 @@ solution.
 \end{proposition}
 
 \begin{proof}
-We will prove that contrapositive. We assume the lasso solution is not unique,
+We will prove the contrapositive. We assume the lasso solution is not unique,
 thus $\rank(X_E) < |E|$, and will prove that this means the columns of $X$ are
 not in general position. Since $\rank(X_E) < |E|$, there exists some $i \in E$
 such that 
